Updates example tool and adds discussion of how to do units

--- a/tools/example_tool_advanced/index.html
+++ b/tools/example_tool_advanced/index.html
@@ -277,6 +277,69 @@
             vertical-align: middle;
         }
 
+        /* Expert Mode Toggle - Prominent placement */
+        .expert-mode-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 14px;
+            background: var(--primary-light);
+            border: 1px solid var(--border-color);
+            border-radius: var(--border-radius);
+            margin-bottom: 16px;
+        }
+        .expert-mode-label {
+            font-size: 0.9rem;
+            font-weight: 600;
+            color: var(--text-color);
+        }
+        .expert-mode-hint {
+            font-size: 0.8rem;
+            color: var(--text-light);
+            margin-left: 8px;
+            font-weight: 400;
+        }
+        .expert-toggle {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+        }
+        .expert-toggle input {
+            width: 40px;
+            height: 22px;
+            appearance: none;
+            -webkit-appearance: none;
+            background: var(--border-color);
+            border-radius: 999px;
+            position: relative;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
+        .expert-toggle input::before {
+            content: '';
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            background: var(--bg-card);
+            border-radius: 50%;
+            top: 3px;
+            left: 3px;
+            transition: transform 0.2s ease;
+            box-shadow: var(--shadow);
+        }
+        .expert-toggle input:checked {
+            background: var(--success-color);
+        }
+        .expert-toggle input:checked::before {
+            transform: translateX(18px);
+        }
+        .expert-toggle-label {
+            font-size: 0.85rem;
+            font-weight: 600;
+            color: var(--text-color);
+        }
+
         /* Advanced Section Toggle */
         .advanced-section {
             display: none;
@@ -296,6 +359,10 @@
         }
         .advanced-toggle:hover { text-decoration: underline; }
         .toggle-icon { font-family: var(--font-mono); font-weight: 600; }
+
+        /* Hide old toggle when expert mode is on */
+        body.expert-mode .advanced-toggle { display: none; }
+        body.expert-mode .advanced-section { display: block; }
 
         /* Slider */
         .slider-group {
@@ -634,18 +701,60 @@
         /* =================================================================
            13. COMPACT DENSITY MODE
            ================================================================= */
-        body[data-density="compact"] .card { padding: 18px; }
-        body[data-density="compact"] .input-group label { font-size: 0.82rem; margin-bottom: 4px; }
+        /* Layout & Cards */
+        body[data-density="compact"] .container { padding: 16px 0; }
+        body[data-density="compact"] .card { padding: 12px; }
+        body[data-density="compact"] .tool-layout { gap: 16px; }
+
+        /* Typography */
+        body[data-density="compact"] h1 { font-size: 1.7rem; margin-bottom: 0.25rem; }
+        body[data-density="compact"] h2 { font-size: 1.1rem; padding-bottom: 8px; margin-bottom: 10px; }
+        body[data-density="compact"] .tool-description { font-size: 0.9rem; margin-bottom: 1rem; }
+
+        /* Inputs */
+        body[data-density="compact"] .input-group { margin-bottom: 10px; }
+        body[data-density="compact"] .input-group label { font-size: 0.78rem; margin-bottom: 3px; }
         body[data-density="compact"] .input-group input,
-        body[data-density="compact"] .input-group select { padding: 9px 12px; font-size: 0.9rem; }
-        body[data-density="compact"] .slider-group { padding: 12px; margin-bottom: 1rem; }
-        body[data-density="compact"] .tool-description { font-size: 0.95rem; }
-        body[data-density="compact"] .tabs { margin-bottom: 18px; }
-        body[data-density="compact"] .result-item { padding: 12px; }
-        body[data-density="compact"] .result-item .value { font-size: 1.1rem; }
-        body[data-density="compact"] .safety-gauge { padding: 10px 14px; margin-bottom: 10px; }
-        body[data-density="compact"] h1 { font-size: 1.9rem; }
-        body[data-density="compact"] h2 { font-size: 1.2rem; padding-bottom: 10px; }
+        body[data-density="compact"] .input-group select { padding: 6px 10px; font-size: 0.85rem; }
+        body[data-density="compact"] .input-group .tooltip-trigger { top: 28px; }
+        body[data-density="compact"] .input-row { gap: 10px; }
+        body[data-density="compact"] .slider-group { padding: 8px 12px; margin-bottom: 10px; }
+        body[data-density="compact"] .slider-header { margin-bottom: 6px; font-size: 0.8rem; }
+        body[data-density="compact"] .slider-labels { font-size: 0.7rem; }
+        body[data-density="compact"] .expert-mode-bar { padding: 8px 12px; margin-bottom: 10px; }
+        body[data-density="compact"] .expert-mode-label { font-size: 0.82rem; }
+        body[data-density="compact"] .expert-mode-hint { font-size: 0.75rem; }
+        body[data-density="compact"] .advanced-section { margin-top: 10px; padding-top: 10px; }
+        body[data-density="compact"] .btn-primary { padding: 10px 20px; font-size: 0.9rem; }
+
+        /* Results */
+        body[data-density="compact"] .tabs { margin-bottom: 12px; }
+        body[data-density="compact"] .tab-btn { padding: 8px 14px; font-size: 0.85rem; }
+        body[data-density="compact"] .result-item { padding: 8px 12px; margin-bottom: 8px; }
+        body[data-density="compact"] .result-item .label { font-size: 0.78rem; }
+        body[data-density="compact"] .result-item .value { font-size: 1rem; }
+        body[data-density="compact"] .result-item .unit { font-size: 0.8rem; }
+        body[data-density="compact"] .derivation-panel { padding: 10px 12px; }
+
+        /* Safety Gauges */
+        body[data-density="compact"] .safety-gauge { padding: 8px 12px; margin-bottom: 8px; }
+        body[data-density="compact"] .gauge-label { font-size: 0.78rem; }
+        body[data-density="compact"] .gauge-value { font-size: 0.85rem; }
+        body[data-density="compact"] .gauge-explainer { padding: 10px 12px; }
+
+        /* Status Banner */
+        body[data-density="compact"] .status-banner { padding: 12px 14px; margin-bottom: 12px; }
+        body[data-density="compact"] .status-title { font-size: 0.95rem; }
+        body[data-density="compact"] .status-message { font-size: 0.82rem; }
+        body[data-density="compact"] .recommendations { font-size: 0.78rem; }
+        body[data-density="compact"] .recommendations li { margin-bottom: 2px; }
+
+        /* Callouts & Background */
+        body[data-density="compact"] .callout { padding: 10px 12px; margin-bottom: 12px; }
+        body[data-density="compact"] .callout-title { font-size: 0.82rem; }
+        body[data-density="compact"] .callout p { font-size: 0.82rem; }
+        body[data-density="compact"] .equation-card { padding: 12px; margin-bottom: 12px; }
+        body[data-density="compact"] .toc { padding: 12px; }
 
         /* =================================================================
            14. FOOTER
@@ -700,16 +809,6 @@
         <div class="settings-content">
             <div class="settings-section">
                 <h4>Behavior</h4>
-                <div class="setting-row">
-                    <div>
-                        <div class="setting-label">Auto-calculate</div>
-                        <div class="setting-help">Update results as inputs change.</div>
-                    </div>
-                    <label class="switch">
-                        <input type="checkbox" id="setting-auto-calc">
-                        <span class="slider-toggle"></span>
-                    </label>
-                </div>
                 <div class="setting-row">
                     <div>
                         <div class="setting-label">Show derivations by default</div>
@@ -768,19 +867,6 @@
                 </div>
             </div>
 
-            <div class="settings-section">
-                <h4>Charts</h4>
-                <div class="setting-row">
-                    <div>
-                        <div class="setting-label">Auto-update charts</div>
-                        <div class="setting-help">Refresh charts when inputs change.</div>
-                    </div>
-                    <label class="switch">
-                        <input type="checkbox" id="setting-auto-charts" checked>
-                        <span class="slider-toggle"></span>
-                    </label>
-                </div>
-            </div>
         </div>
         <div class="settings-footer">
             <button class="btn btn-secondary" id="settings-reset" type="button" style="width: 100%;">Reset to Defaults</button>
@@ -818,6 +904,19 @@
             <!-- ============== INPUTS ============== -->
             <section class="tool-inputs card">
                 <h2>Inputs</h2>
+
+                <!-- Expert Mode Toggle - Always Visible -->
+                <div class="expert-mode-bar">
+                    <div>
+                        <span class="expert-mode-label">Expert Mode</span>
+                        <span class="expert-mode-hint">Show all parameters</span>
+                    </div>
+                    <label class="expert-toggle">
+                        <input type="checkbox" id="expert-mode-toggle" onchange="toggleExpertMode()">
+                        <span class="expert-toggle-label" id="expert-mode-status">Off</span>
+                    </label>
+                </div>
+
                 <form id="calc-form">
                     <!-- Core Inputs -->
                     <div class="input-group">
@@ -1205,7 +1304,6 @@
         let pyUtils, pyToolModule;
         let lastResults = null;
         let openDerivation = null;
-        let calcDebounce = null;
 
         const TOOL_MODULE_NAME = 'example_advanced';
         const TOOL_FUNCTION_NAME = 'analyze_widget';
@@ -1214,10 +1312,9 @@
 
         // Default settings
         const defaultSettings = {
-            autoCalc: false,
+            expertMode: false,
             showDerivations: false,
             showGauges: false,
-            autoCharts: true,
             theme: 'system',
             density: 'comfortable',
             precision: 3
@@ -1249,19 +1346,17 @@
             document.body.dataset.theme = settings.theme;
             document.body.dataset.density = settings.density;
 
+            // Apply expert mode
+            applyExpertMode();
+
             // Update toggle switches
-            document.getElementById('setting-auto-calc').checked = settings.autoCalc;
             document.getElementById('setting-show-derivations').checked = settings.showDerivations;
             document.getElementById('setting-show-gauges').checked = settings.showGauges;
-            document.getElementById('setting-auto-charts').checked = settings.autoCharts;
 
             // Update segmented controls
             setSegmentedActive('[data-theme]', settings.theme, 'theme');
             setSegmentedActive('[data-density]', settings.density, 'density');
             setSegmentedActive('[data-precision]', String(settings.precision), 'precision');
-
-            // Update calc button hint
-            updateCalcHint();
 
             // Re-render results if we have them (for precision changes)
             if (lastResults) {
@@ -1277,23 +1372,10 @@
             });
         }
 
-        function updateCalcHint() {
-            const btn = document.getElementById('calculate-btn');
-            if (settings.autoCalc && pyToolModule) {
-                btn.textContent = 'Auto-calculating...';
-            } else if (pyToolModule) {
-                btn.textContent = 'Calculate';
-            }
-        }
-
         function handleSettingChange(key, value) {
             settings[key] = value;
             saveSettings();
             applySettings();
-
-            if (key === 'autoCalc' && value && pyToolModule) {
-                scheduleCalculation();
-            }
         }
 
         function toggleSettingsPanel(open) {
@@ -1308,10 +1390,8 @@
 
         function bindSettingsControls() {
             // Toggle switches
-            document.getElementById('setting-auto-calc').addEventListener('change', e => handleSettingChange('autoCalc', e.target.checked));
             document.getElementById('setting-show-derivations').addEventListener('change', e => handleSettingChange('showDerivations', e.target.checked));
             document.getElementById('setting-show-gauges').addEventListener('change', e => handleSettingChange('showGauges', e.target.checked));
-            document.getElementById('setting-auto-charts').addEventListener('change', e => handleSettingChange('autoCharts', e.target.checked));
 
             // Segmented controls
             document.querySelectorAll('.settings-panel [data-theme]').forEach(btn => {
@@ -1339,28 +1419,6 @@
             // Escape key to close
             document.addEventListener('keydown', e => {
                 if (e.key === 'Escape') toggleSettingsPanel(false);
-            });
-        }
-
-        // =================================================================
-        // AUTO-CALCULATE WITH DEBOUNCING
-        // =================================================================
-        function scheduleCalculation() {
-            if (!settings.autoCalc || !pyToolModule) return;
-
-            if (calcDebounce) {
-                window.clearTimeout(calcDebounce);
-            }
-            calcDebounce = window.setTimeout(() => {
-                handleCalculate({ preventDefault: () => {} });
-            }, 350);
-        }
-
-        function bindAutoCalc() {
-            const form = document.getElementById('calc-form');
-            form.querySelectorAll('input, select').forEach(el => {
-                el.addEventListener('input', scheduleCalculation);
-                el.addEventListener('change', scheduleCalculation);
             });
         }
 
@@ -1455,6 +1513,33 @@
             }
         }
 
+        function toggleExpertMode() {
+            const toggle = document.getElementById('expert-mode-toggle');
+            const status = document.getElementById('expert-mode-status');
+            const isOn = toggle.checked;
+
+            document.body.classList.toggle('expert-mode', isOn);
+            status.textContent = isOn ? 'On' : 'Off';
+
+            // Save preference to localStorage
+            settings.expertMode = isOn;
+            saveSettings();
+        }
+
+        function applyExpertMode() {
+            const toggle = document.getElementById('expert-mode-toggle');
+            const status = document.getElementById('expert-mode-status');
+            if (settings.expertMode) {
+                toggle.checked = true;
+                status.textContent = 'On';
+                document.body.classList.add('expert-mode');
+            } else {
+                toggle.checked = false;
+                status.textContent = 'Off';
+                document.body.classList.remove('expert-mode');
+            }
+        }
+
         function toggleDerivation(key) {
             const panel = document.getElementById('deriv-' + key);
             const item = document.querySelector(`.result-item[data-key="${key}"]`);
@@ -1544,19 +1629,10 @@
                 // Setup form handler
                 document.getElementById('calc-form').addEventListener('submit', handleCalculate);
 
-                // Bind auto-calculate to inputs
-                bindAutoCalc();
-
-                // Update button state
-                updateCalcHint();
-
                 // Hide loading overlay
                 document.getElementById('loading-overlay').classList.add('hidden');
-
-                // If auto-calc is on, run initial calculation
-                if (settings.autoCalc) {
-                    scheduleCalculation();
-                }
+                document.getElementById('calculate-btn').textContent = 'Calculate';
+                document.getElementById('calculate-btn').disabled = false;
 
             } catch (error) {
                 loadingText.textContent = 'Error loading: ' + error.message;
