--- a/tools/orders-of-magnitude-atlas/index.html
+++ b/tools/orders-of-magnitude-atlas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orders of Magnitude Atlas - Engineering Tools</title>
+    <title>Orders of Magnitude Atlas (Experimental) - Engineering Tools</title>
 
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
@@ -428,7 +428,7 @@
     </header>
 
     <main class="container">
-        <h1>Orders of Magnitude Atlas</h1>
+        <h1>Orders of Magnitude Atlas (Experimental)</h1>
         <p class="tool-description" id="tool-description">
             Pick a domain to see a curated list of anchors and a log-scale ladder chart.
         </p>
@@ -470,73 +470,31 @@
             </section>
 
             <section class="tool-outputs card">
-                <div class="tabs">
-                    <button class="tab-link active" onclick="openTab(event, 'results')">Results</button>
-                    <button class="tab-link" onclick="openTab(event, 'visualization')">Visualization</button>
-                    <button class="tab-link" onclick="openTab(event, 'background')">Background & Principles</button>
+                <h2>Atlas</h2>
+                <p id="results-placeholder">Select a domain to load its anchors.</p>
+                <div class="summary-strip" id="summary-strip" style="display: none;">
+                    <div class="summary-item">
+                        <div class="label">Anchor Span</div>
+                        <div class="value" id="val-span_exponent">-</div>
+                    </div>
+                    <div class="summary-item">
+                        <div class="label">Span Ratio</div>
+                        <div class="value" id="val-span_ratio">-</div>
+                    </div>
+                    <div class="summary-item">
+                        <div class="label">Anchor Count</div>
+                        <div class="value" id="val-anchor_count">-</div>
+                    </div>
                 </div>
+                <p class="result-note" id="range-note" style="display: none;"></p>
 
-                <div id="results" class="tab-content" style="display: block;">
-                    <h3>Domain Summary</h3>
-                    <p id="results-placeholder">Select a domain to load its anchors.</p>
-                    <div id="results-grid" class="results-grid" style="display: none;">
-                        <div class="result-item highlight" data-key="span_exponent" onclick="toggleDerivation('span_exponent')">
-                            <div class="label">Anchor Span</div>
-                            <div class="value" id="val-span_exponent">-</div>
-                            <span class="icon">v</span>
-                        </div>
-                        <div class="result-item" data-key="span_ratio" onclick="toggleDerivation('span_ratio')">
-                            <div class="label">Span Ratio</div>
-                            <div class="value" id="val-span_ratio">-</div>
-                            <span class="icon">v</span>
-                        </div>
-                        <div class="result-item static">
-                            <div class="label">Anchor Count</div>
-                            <div class="value" id="val-anchor_count">-</div>
-                        </div>
-                    </div>
-                    <p class="result-note" id="range-note" style="display: none;"></p>
-
-                    <div class="derivation-panel" id="deriv-span_exponent">
-                        <div class="derivation-header">
-                            <span class="derivation-title">Anchor Span Derivation</span>
-                            <button class="derivation-close" onclick="toggleDerivation('span_exponent')">x</button>
-                        </div>
-                        <div class="derivation-step">
-                            <div class="step-title">Equation (1)</div>
-                            <div class="equation">$$ \\Delta n = n_{\\text{max}} - n_{\\text{min}} $$</div>
-                        </div>
-                        <div class="derivation-step">
-                            <div class="step-title">Substituted Values</div>
-                            <div class="equation" id="subst-span_exponent"></div>
-                        </div>
-                    </div>
-
-                    <div class="derivation-panel" id="deriv-span_ratio">
-                        <div class="derivation-header">
-                            <span class="derivation-title">Span Ratio Derivation</span>
-                            <button class="derivation-close" onclick="toggleDerivation('span_ratio')">x</button>
-                        </div>
-                        <div class="derivation-step">
-                            <div class="step-title">Equation (2)</div>
-                            <div class="equation">$$ R = 10^{\\Delta n} $$</div>
-                        </div>
-                        <div class="derivation-step">
-                            <div class="step-title">Substituted Values</div>
-                            <div class="equation" id="subst-span_ratio"></div>
-                        </div>
-                    </div>
-
-                    <div class="anchor-section">
-                        <h4>Anchor List</h4>
+                <div class="atlas-grid">
+                    <div class="atlas-panel">
+                        <h3>Anchor List</h3>
                         <div class="anchor-list" id="anchor-list"></div>
                     </div>
-                </div>
-
-                <div id="visualization" class="tab-content">
-                    <h3>Magnitude Ladder</h3>
-                    <div class="chart-container">
-                        <h4>Log Scale Ladder</h4>
+                    <div class="atlas-panel">
+                        <h3>Log Ladder</h3>
                         <div class="ladder-container">
                             <div class="ladder-scale" id="ladder-scale"></div>
                             <div class="ladder-labels">
@@ -551,8 +509,28 @@
                     </div>
                 </div>
 
-                <div id="background" class="tab-content">
-                    <h3>Background & Principles</h3>
+                <details class="details-section">
+                    <summary>Show equations</summary>
+                    <div class="equation-card">
+                        <strong>Equation (1)</strong>
+                        <span class="equation-expression">$$ \\Delta n = n_{\\text{max}} - n_{\\text{min}} $$</span>
+                        <ul>
+                            <li><span class="math-inline">n</span>: anchor exponents (log10)</li>
+                        </ul>
+                        <div class="equation-expression" id="subst-span_exponent"></div>
+                    </div>
+                    <div class="equation-card">
+                        <strong>Equation (2)</strong>
+                        <span class="equation-expression">$$ R = 10^{\\Delta n} $$</span>
+                        <ul>
+                            <li><span class="math-inline">R</span>: ratio between max and min anchors</li>
+                        </ul>
+                        <div class="equation-expression" id="subst-span_ratio"></div>
+                    </div>
+                </details>
+
+                <details class="details-section">
+                    <summary>Background & Principles</summary>
                     <div class="toc-card">
                         <strong>Contents</strong>
                         <ol>
@@ -619,7 +597,7 @@
                         <h3>4. Anchor Selection</h3>
                         <p>Anchors are curated reference values from everyday engineering intuition (objects, processes, and global-scale quantities). The list is ordered by log10 magnitude to show the full span of the domain.</p>
                     </div>
-                </div>
+                </details>
             </section>
         </div>
     </main>
@@ -631,7 +609,6 @@
     <script>
         let toolDocumentation = {};
         let pyUtils, pyToolModule;
-        let openDerivation = null;
         let pyReady = false;
 
         const TOOL_MODULE_NAME = 'orders_of_magnitude';
@@ -639,13 +616,6 @@
         const PARAM_ORDER = ['domain'];
 
         const domainInput = document.getElementById('domain');
-
-        function openTab(event, tabName) {
-            document.querySelectorAll('.tab-content').forEach(tab => tab.style.display = 'none');
-            document.querySelectorAll('.tab-link').forEach(link => link.classList.remove('active'));
-            document.getElementById(tabName).style.display = 'block';
-            event.currentTarget.classList.add('active');
-        }
 
         function typesetMath() {
             if (window.MathJax) { window.MathJax.typesetPromise(); }
@@ -671,33 +641,12 @@
         }
 
 
-        function toggleDerivation(key) {
-            const panel = document.getElementById('deriv-' + key);
-            const item = document.querySelector(`.result-item[data-key="${key}"]`);
-            if (!panel || !item) return;
-
-            if (openDerivation && openDerivation !== key) {
-                document.getElementById('deriv-' + openDerivation).classList.remove('visible');
-                document.querySelector(`.result-item[data-key="${openDerivation}"]`)?.classList.remove('expanded');
-            }
-
-            if (panel.classList.contains('visible')) {
-                panel.classList.remove('visible');
-                item.classList.remove('expanded');
-                openDerivation = null;
-            } else {
-                panel.classList.add('visible');
-                item.classList.add('expanded');
-                openDerivation = key;
-                typesetMath();
-            }
-        }
-
         async function main() {
             const loadingText = document.getElementById('loading-text');
             try {
                 loadingText.textContent = 'Loading Pyodide...';
                 const pyodide = await loadPyodide();
+                const cacheBust = Date.now();
 
                 loadingText.textContent = 'Loading Python modules...';
                 await pyodide.loadPackage('micropip');
@@ -705,11 +654,11 @@
                     import micropip
                     from pyodide.http import pyfetch
 
-                    response_utils = await pyfetch('../../pycalcs/utils.py')
+                    response_utils = await pyfetch('../../pycalcs/utils.py?cache=${cacheBust}')
                     with open('utils.py', 'w') as f:
                         f.write(await response_utils.string())
 
-                    response_tool = await pyfetch('../../pycalcs/${TOOL_MODULE_NAME}.py')
+                    response_tool = await pyfetch('../../pycalcs/${TOOL_MODULE_NAME}.py?cache=${cacheBust}')
                     with open('${TOOL_MODULE_NAME}.py', 'w') as f:
                         f.write(await response_tool.string())
 
@@ -723,26 +672,22 @@
                 loadingText.textContent = 'Parsing documentation...';
                 const docMap = pyUtils.get_documentation(TOOL_MODULE_NAME, TOOL_FUNCTION_NAME).toJs();
 
-                if (docMap.has('error')) {
-                    const placeholder = document.getElementById('results-placeholder');
-                    placeholder.textContent = docMap.get('error');
-                    placeholder.style.color = 'var(--danger-color)';
-                    document.getElementById('loading-overlay').classList.add('hidden');
-                    return;
-                }
+                if (!docMap.has('error')) {
+                    toolDocumentation = Object.fromEntries(docMap);
+                    if (toolDocumentation.parameters) {
+                        toolDocumentation.parameters = Object.fromEntries(toolDocumentation.parameters);
+                    }
+                    if (toolDocumentation.returns) {
+                        toolDocumentation.returns = Object.fromEntries(toolDocumentation.returns);
+                    }
 
-                toolDocumentation = Object.fromEntries(docMap);
-                if (toolDocumentation.parameters) {
-                    toolDocumentation.parameters = Object.fromEntries(toolDocumentation.parameters);
-                }
-                if (toolDocumentation.returns) {
-                    toolDocumentation.returns = Object.fromEntries(toolDocumentation.returns);
-                }
-
-                populateTooltips();
-                if (toolDocumentation.description) {
-                    document.getElementById('tool-description').textContent = toolDocumentation.description.split('\n')[0];
-                    document.getElementById('background-overview').textContent = toolDocumentation.description;
+                    populateTooltips();
+                    if (toolDocumentation.description) {
+                        document.getElementById('tool-description').textContent = toolDocumentation.description.split('\n')[0];
+                        document.getElementById('background-overview').textContent = toolDocumentation.description;
+                    }
+                } else {
+                    console.warn('Docstring error:', docMap.get('error'));
                 }
 
                 document.getElementById('loading-overlay').classList.add('hidden');
@@ -790,7 +735,7 @@
                 placeholder.textContent = 'Error: ' + error.message;
                 placeholder.style.color = 'var(--danger-color)';
                 placeholder.style.display = 'block';
-                document.getElementById('results-grid').style.display = 'none';
+                document.getElementById('summary-strip').style.display = 'none';
                 document.getElementById('range-note').style.display = 'none';
                 document.getElementById('anchor-list').innerHTML = '';
                 document.getElementById('ladder-scale').innerHTML = '';
@@ -804,7 +749,7 @@
             const placeholder = document.getElementById('results-placeholder');
             placeholder.style.display = 'none';
             placeholder.style.color = 'var(--text-light)';
-            document.getElementById('results-grid').style.display = 'grid';
+            document.getElementById('summary-strip').style.display = 'grid';
 
             document.getElementById('val-span_exponent').innerHTML =
                 `${formatNumber(results.anchor_span_exponent, 4)} <span class="unit">decades</span>`;
