--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -7,38 +7,45 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
     <style>
         :root {
-            --bg: #fefefe;
-            --surface: #ffffff;
-            --border: #e6e8ef;
-            --muted: #7c8497;
-            --text: #1f2430;
-            --accent: #0d9488;
-            --accent-soft: rgba(13, 148, 136, 0.1);
-            --shadow: 0 18px 45px rgba(31, 37, 45, 0.08);
-            --radius-lg: 28px;
-            --radius-md: 16px;
+            --bg-primary: #0a0a0a;
+            --bg-secondary: #141414;
+            --bg-card: #1a1a1a;
+            --bg-input: #222222;
+            --surface: #1a1a1a;
+            --border: #2a2a2a;
+            --border-light: #333333;
+            --muted: #888888;
+            --text: #ffffff;
+            --text-secondary: #a0a0a0;
+            --accent: #3b82f6;
+            --accent-soft: rgba(59, 130, 246, 0.15);
+            --shadow: 0 4px 20px rgba(0,0,0,0.4);
+            --radius-lg: 12px;
+            --radius-md: 8px;
+            --font-mono: 'SF Mono', 'Fira Code', 'Consolas', monospace;
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
             min-height: 100vh;
-            background: linear-gradient(145deg, #f5f7fb 0%, #fdfefe 50%, #f2f5f7 100%);
-            font-family: "Inter", system-ui, sans-serif;
+            background: var(--bg-primary);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             color: var(--text);
             margin: 0;
+            line-height: 1.6;
         }
 
         header.navbar {
-            background-color: var(--surface);
+            background: var(--bg-secondary);
             border-bottom: 1px solid var(--border);
-            box-shadow: 0 8px 24px rgba(37, 50, 71, 0.08);
         }
 
         .nav-container {
-            width: min(1240px, 100%);
+            max-width: 1400px;
             margin: 0 auto;
-            padding: 20px 24px;
+            height: 64px;
+            padding: 0 24px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -46,171 +53,195 @@
         }
 
         .nav-brand {
-            color: var(--accent);
+            color: var(--text);
             font-weight: 600;
+            font-size: 1.25rem;
             text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            font-size: 1rem;
         }
 
-        .nav-brand:hover {
-            text-decoration: underline;
+        .nav-title {
+            color: var(--text-secondary);
+            font-size: 0.9rem;
         }
 
         main.container {
-            width: min(1240px, 100%);
+            max-width: 1400px;
             margin: 0 auto;
-            padding: 32px 18px 60px;
+            padding: 32px 24px 60px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
+            gap: 24px;
+        }
+
+        .tool-header {
+            text-align: center;
+            margin-bottom: 16px;
+        }
+
+        .tool-header h1 {
+            font-size: 2.5rem;
+            font-weight: 600;
+            margin-bottom: 12px;
+            letter-spacing: -0.02em;
+        }
+
+        .tool-header p {
+            font-size: 1.1rem;
+            color: var(--text-secondary);
+            max-width: 600px;
         }
 
         .dual-shell {
-            width: min(1240px, 100%);
-            background: var(--surface);
+            width: 100%;
+            background: var(--bg-card);
             border-radius: var(--radius-lg);
             border: 1px solid var(--border);
-            box-shadow: var(--shadow);
             display: grid;
-            grid-template-columns: minmax(220px, 0.9fr) minmax(260px, 1fr) minmax(260px, 1fr) minmax(240px, 0.9fr);
+            grid-template-columns: minmax(200px, 0.8fr) minmax(240px, 1fr) minmax(240px, 1fr) minmax(220px, 0.9fr);
             overflow: hidden;
         }
 
         .dual-panel {
-            padding: 32px 30px 34px;
+            padding: 28px 24px;
             border-right: 1px solid var(--border);
             display: flex;
             flex-direction: column;
-            gap: 24px;
+            gap: 20px;
         }
 
         .dual-panel-header {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 8px;
         }
 
         .dual-panel-header h1 {
-            font-size: 1.72rem;
-            font-weight: 700;
-            margin-bottom: 8px;
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin-bottom: 4px;
         }
 
         .dual-panel-header p {
-            color: var(--muted);
-            font-size: 0.94rem;
+            color: var(--text-secondary);
+            font-size: 0.85rem;
             line-height: 1.5;
         }
 
         .quantity-chip-row {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-            gap: 8px;
+            grid-template-columns: 1fr;
+            gap: 6px;
         }
 
         .dual-panel-quantity {
-            gap: 18px;
+            gap: 16px;
         }
 
         .dual-panel-quantity .quantity-panel-group {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
         }
 
         .panel-label {
-            font-size: 0.78rem;
+            font-size: 0.75rem;
             letter-spacing: 0.08em;
             text-transform: uppercase;
-            font-weight: 700;
-            color: var(--muted);
+            font-weight: 600;
+            color: var(--text-secondary);
         }
 
         .panel-helper {
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             color: var(--muted);
             line-height: 1.4;
         }
 
         .dual-panel-quantity .quantity-chip-row {
-            grid-template-columns: 1fr;
-            grid-auto-rows: minmax(38px, auto);
-            max-height: clamp(420px, 70vh, 680px);
+            max-height: clamp(380px, 60vh, 600px);
             overflow-y: auto;
             padding-right: 4px;
         }
 
         .quantity-chip {
-            padding: 9px 14px;
-            border-radius: 12px;
+            padding: 10px 14px;
+            border-radius: var(--radius-md);
             border: 1px solid var(--border);
-            background: #fafbfc;
-            font-size: 0.83rem;
-            font-weight: 600;
-            text-align: center;
+            background: var(--bg-input);
+            font-size: 0.85rem;
+            font-weight: 500;
+            text-align: left;
             cursor: pointer;
-            transition: all 0.16s ease;
+            transition: all 0.15s ease;
+            color: var(--text-secondary);
         }
 
         .quantity-chip:hover {
-            border-color: rgba(13, 148, 136, 0.35);
-            color: var(--accent);
+            border-color: var(--border-light);
+            color: var(--text);
         }
 
         .quantity-chip.is-active {
             background: var(--accent-soft);
-            border-color: rgba(13, 148, 136, 0.5);
+            border-color: var(--accent);
             color: var(--accent);
         }
 
         .value-stack label {
             display: block;
-            font-size: 0.84rem;
-            font-weight: 600;
-            color: var(--muted);
+            font-size: 0.8rem;
+            font-weight: 500;
+            color: var(--text-secondary);
             margin-bottom: 8px;
         }
 
         .dual-panel[data-side="left"] .dual-panel-header,
         .dual-panel[data-side="right"] .dual-panel-header {
-            min-height: 132px;
+            min-height: 100px;
         }
 
         .value-stack input[type="number"] {
             width: 100%;
-            padding: 13px 14px;
+            padding: 12px 14px;
             border-radius: var(--radius-md);
             border: 1px solid var(--border);
-            font-size: 1.12rem;
+            font-size: 1.1rem;
             font-weight: 600;
+            font-family: var(--font-mono);
             color: var(--text);
-            background: #fbfcfe;
+            background: var(--bg-input);
         }
 
         .value-stack input[type="number"]:focus {
             outline: none;
-            border-color: rgba(13, 148, 136, 0.48);
-            box-shadow: 0 0 0 2px rgba(13, 148, 136, 0.18);
+            border-color: var(--accent);
         }
 
         .search-stack input[type="search"] {
             width: 100%;
             padding: 10px 12px;
-            border-radius: 12px;
+            border-radius: var(--radius-md);
             border: 1px solid var(--border);
-            background: #f9fafb;
+            background: var(--bg-input);
             color: var(--text);
+            font-size: 0.9rem;
+        }
+
+        .search-stack input[type="search"]:focus {
+            outline: none;
+            border-color: var(--accent);
+        }
+
+        .search-stack input[type="search"]::placeholder {
+            color: var(--muted);
         }
 
         .unit-list {
             list-style: none;
             display: flex;
             flex-direction: column;
-            gap: 6px;
+            gap: 4px;
             max-height: 280px;
             overflow-y: auto;
             padding-right: 4px;
@@ -221,58 +252,59 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px 12px;
-            border-radius: 12px;
+            border-radius: var(--radius-md);
             border: 1px solid transparent;
-            background: #f7f8fb;
+            background: var(--bg-input);
             cursor: pointer;
-            font-size: 0.9rem;
-            font-weight: 600;
-            color: var(--text);
-            transition: all 0.14s ease;
+            font-size: 0.85rem;
+            font-weight: 500;
+            color: var(--text-secondary);
+            transition: all 0.15s ease;
         }
 
         .unit-chip:hover {
-            border-color: rgba(13, 148, 136, 0.25);
+            border-color: var(--border-light);
+            color: var(--text);
         }
 
         .unit-chip.is-active {
-            background: rgba(13, 148, 136, 0.12);
-            border-color: rgba(13, 148, 136, 0.45);
+            background: var(--accent-soft);
+            border-color: var(--accent);
             color: var(--accent);
         }
 
         .dual-info {
-            padding: 34px 28px 36px;
-            background: #fafbfc;
+            padding: 28px 24px;
+            background: var(--bg-secondary);
             display: flex;
             flex-direction: column;
-            gap: 18px;
+            gap: 16px;
+            border-left: 1px solid var(--border);
         }
 
         .info-note {
             font-size: 0.85rem;
-            color: rgba(15, 118, 110, 0.85);
+            color: var(--accent);
             display: none;
         }
 
         .info-note[data-state="error"] {
-            color: #dc2626;
+            color: #ef4444;
         }
 
         .info-card {
-            background: #ffffff;
-            border-radius: 14px;
+            background: var(--bg-card);
+            border-radius: var(--radius-md);
             border: 1px solid var(--border);
-            padding: 16px 18px;
-            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.65);
+            padding: 14px 16px;
         }
 
         .info-card.info-compact {
-            padding: 12px 16px;
+            padding: 10px 14px;
         }
 
         .info-card h3 {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             letter-spacing: 0.08em;
             text-transform: uppercase;
             color: var(--muted);
@@ -280,37 +312,40 @@
         }
 
         .info-primary {
-            font-size: 1.05rem;
+            font-size: 1rem;
             font-weight: 600;
+            font-family: var(--font-mono);
         }
 
         .info-secondary {
-            font-size: 0.9rem;
-            color: var(--muted);
+            font-size: 0.85rem;
+            color: var(--text-secondary);
         }
 
         .comparison-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-            gap: 12px;
+            grid-template-columns: 1fr;
+            gap: 10px;
         }
 
         .comparison-card {
-            padding: 14px;
-            border-radius: 12px;
+            padding: 12px;
+            border-radius: var(--radius-md);
             border: 1px solid var(--border);
-            background: #ffffff;
+            background: var(--bg-input);
         }
 
         .comparison-label {
-            font-size: 0.83rem;
+            font-size: 0.8rem;
             font-weight: 600;
             margin-bottom: 4px;
+            color: var(--text);
         }
 
         .comparison-values {
-            font-size: 0.92rem;
+            font-size: 0.85rem;
             font-weight: 600;
+            font-family: var(--font-mono);
             color: var(--accent);
             display: flex;
             flex-direction: column;
@@ -318,20 +353,57 @@
         }
 
         .comparison-secondary {
-            font-size: 0.78rem;
+            font-size: 0.75rem;
             color: var(--muted);
         }
 
         .comparison-ratio {
-            margin-top: 6px;
-            font-size: 0.75rem;
-            color: rgba(15, 118, 110, 0.8);
-            letter-spacing: 0.08em;
+            margin-top: 4px;
+            font-size: 0.7rem;
+            color: var(--text-secondary);
         }
 
-        @media (max-width: 1080px) {
+        .comparison-empty {
+            color: var(--muted);
+            font-size: 0.85rem;
+            font-style: italic;
+        }
+
+        /* Scrollbar styling */
+        ::-webkit-scrollbar {
+            width: 6px;
+        }
+        ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: var(--border-light);
+            border-radius: 3px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: var(--muted);
+        }
+
+        @media (max-width: 1100px) {
+            .dual-shell {
+                grid-template-columns: 1fr 1fr;
+            }
+            .dual-panel-quantity {
+                grid-column: span 2;
+            }
+            .dual-info {
+                grid-column: span 2;
+                border-left: none;
+                border-top: 1px solid var(--border);
+            }
+        }
+
+        @media (max-width: 700px) {
             .dual-shell {
                 grid-template-columns: 1fr;
+            }
+            .dual-panel-quantity {
+                grid-column: span 1;
             }
             .dual-panel {
                 border-right: none;
@@ -342,8 +414,10 @@
                 overflow-y: visible;
             }
             .dual-info {
-                border-left: none;
-                border-top: 1px solid var(--border);
+                grid-column: span 1;
+            }
+            .tool-header h1 {
+                font-size: 1.8rem;
             }
         }
     </style>
